# Diabetes

./: README.md  main.py  pipeline.py  pyproject.toml  schema.py  utils.py
steps/: data_loader.py  data_prep.py  model_training.py
