[project]
name = "diabetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]<=0.116.1",
    "logfire[fastapi]>=4.2.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "zenml[server]==0.84.2",
]
